--- a/bahamut/Bahamut-p2.html
+++ b/bahamut/Bahamut-p2.html
@@ -241,10 +241,11 @@
 									<li>死亡宣告踩圈*3</li>
 									<li>凶鸟尖喙→换T</li>
 									<br>
-									<li>-P3·俯冲阶段-</li>
+									<li>-P3·小龙俯冲-</li>
 									<li>奈尔台词：(陨石流+月华冲)/(月华冲+热离子光束)</li>
 									<br>
-									<li>俯冲结束</li>
+									<li>-P4·俯冲结束-</li>
+									<li>奈尔台词：任意</li>
 									<li>奈尔台词：任意</li>
 									<li>凶鸟尖喙→换T</li>
 									<li>巴哈姆特之爪</li>
@@ -386,9 +387,9 @@
 									</p><br>
 									<hr>
 									<h4>核心机制二·光暗点名</h4>
-									<h5>机制分析</h5>
+									<h5>※机制分析</h5>
 									<p>死亡宣告一共会出现三轮，第一轮是两名玩家，后两轮是三名玩家。由于每名玩家死亡宣告的持续时间不同（6秒/10秒/16秒），白圈出现的时间也有先后顺序，因此BUFF时间短的玩家需要踩先出现的白圈。</p>
-									<h5>处理方法</h5>
+									<h5>※处理方法</h5>
 									<p>及时看清自身BUFF的持续时间踩对应的白圈。（你也可以使用ACT的触发器功能监控）</p><br>
 									<p class="attention-part">※由于光暗点名总是在冰火雷点名过程中出现，因此处理的重点在于“头脑清醒”——看清死亡宣告的持续时间，根据时间想好「分摊火/放雷/踩白圈」的先后顺序。具体的处理方法将会在阶段详解中详细说明。
 									</p><br>
@@ -454,10 +455,10 @@
 										</div>
 									</div>
 									<p>第一句台词只会伴随6秒和10秒两个死亡宣告点名，并且是在冰火雷机制结束后才出现，因此比较简单，算是给玩家练习：分摊完火圈后第一个白圈爆炸，6秒死亡宣告的玩家去踩白圈消除，紧接着第二个白圈爆炸，10秒死亡宣告的玩家去踩白圈消除。最后BOSS会对MT使用五连巴哈姆特之爪，标志着进入第二次冰火雷。</p>
-									<br>
+									<br><hr>
 									<h4>第二次冰火雷+无台词</h4>
 									<p>BOSS在对MT使用巴哈姆特之爪的同时，会出现第二次火连线和双雷点名。根据进-出-进-进的原则，这三名玩家直接远离人群并且互相远离即可。这一次没有台词和光暗点名，非常简单。</p>
-									<br>
+									<br><hr>
 									<h4>第三次冰火雷+奈尔台词</h4>
 									<p>第三次冰火雷时，奈尔会先说出第二句台词，固定为下面两种：</p>
 									<p>"Blazing path, lead me to conquest!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+钢铁战车</p>
@@ -483,13 +484,20 @@
 									</p><br>
 									<p>火分摊后BOSS再次对MT使用巴哈姆特之爪，标志进入最后一次冰火雷点名。<br>
 
-									<br>
+									<br><hr>
 									<h4>第四次冰火雷+奈尔台词</h4>
 									<p>第三句奈尔的台词固定为：</p>
 									<p>"From on high I descend, mine enemies to smite!" &emsp;&emsp;&emsp;——&emsp;凶鸟冲+钢铁战车</p>
 									<p>"From on high I descend, in blessed light to bask!"&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
 									<br>
-									<p>也就是全员分散+远离/靠近BOSS。所有人先按分好的位置分散好，防止凶鸟冲靠的太近而被击退。凶鸟冲后，所有人根据台词决定是远离BOSS躲避钢铁战车或者靠近BOSS处理月流电圈。随后就是冰火雷机制，这一次冰火雷时间轴如下：</p>
+									<p>也就是全员分散+远离/靠近BOSS。所有人先按分好的位置分散好，防止彼此靠的太近而被击退，分散站位可以参考下图。</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/ravendive.png" alt="">
+										<div>
+											<li>※凶鸟冲分散站位，仅作参考，请根据队伍实际情况调整。</li>
+										</div>
+									</div>
+									<p>凶鸟冲后，所有人根据台词决定是远离BOSS躲避钢铁战车或者靠近BOSS处理月流电圈。随后就是冰火雷机制，这一次冰火雷时间轴如下：</p>
 									<div id="p2.5-timeline-area" class="timeline-area"></div>
 									<div class="figure aligncenter">
 										<div>
@@ -513,18 +521,44 @@
 										</div>
 										<div class="title-hr"></div>
 									</div>
-									<h3>新增技能</h3>
-									<li>超新星：BOSS会点名玩家脚下出现黑圈，黑圈刚出现时第一段攻击只会对范围内的玩家造成轻微伤害。短暂延迟后，第二段攻击"万有引力"会将范围内的玩家拉到黑圈中心，造成伤害极高的出血效果。玩家被点名后需要及时远离黑圈范围。</li>
+									<h4>新增技能</h4>
+									<li>超新星：BOSS会点名玩家脚下出现黑圈
+										<a  class="img-hover-area" name="hypernova">
+											<img src="img/hover-sign.png" alt="">
+											&nbsp;&nbsp;&nbsp;超新星
+										</a>
+									，黑圈刚出现时第一段攻击只会对范围内的玩家造成轻微伤害。短暂延迟后，第二段攻击"万有引力"会将范围内的玩家拉到黑圈中心，造成伤害极高的出血效果。玩家被点名后需要及时远离黑圈范围。</li>
 									<h4>核心机制·小龙俯冲</h4>
 									<h5>※机制分析</h5>
-									<p>P2开场，BOSS在读条龙神的加护后，场外会出现5条小龙。在P3俯冲阶段，将会有3名玩家被点名俯冲标记。接着，这五条小龙将会按顺时针2-1-2的顺序，从12点开始依次对标记消失的位置进行俯冲。也就是说，从12点开始顺时针第一二条龙将会俯冲第一个标记消失处，第三条龙俯冲第二个标记消失处，最后两条龙俯冲第三个标记消失处。</p>
+									<p>P2开场，BOSS在读条龙神的加护后，场外会出现5条小龙。在P3俯冲阶段，将会有3名玩家被点名<a  class="img-hover-area" name="greenpoint">
+											<img src="img/hover-sign.png" alt="">
+											&nbsp;&nbsp;&nbsp;俯冲标记
+										</a>
+									。接着，这五条小龙将会按顺时针2-1-2的顺序，从12点开始依次对标记消失的位置进行俯冲。也就是说，从12点开始顺时针第一二条龙（包括12点）将会俯冲第一个标记消失处，第三条龙俯冲第二个标记消失处，最后两条龙俯冲第三个标记消失处。</p>
 									<h5>※处理方法</h5>
 									<p>如下图所示，首先标记第一组两条小龙：根据场地标点A迅速确定12点，然后顺时针找到2条小龙。如果两只小龙距离较近，就将标记放在两只小龙的一侧，反之则将标记放在两只小龙的之间。</p>
 									<p>接着标记第二组一条小龙：找到第三只小龙，将标记放在小龙的一侧。</p>
 									<p>最后标记第三组两条小龙：找到最后两条小龙，同第一组的标记方式相同处理。</p>
-									<p>在俯冲点名消失前，BOSS会对点名的玩家使用超新星，玩家需要在标记点附近移动，躲开超新星，在俯冲标记消失后再回人群。提前回来会导致俯冲范围变大。</p>
-									<h5>俯冲阶段的台词</h5>
-									<p>在俯冲阶段开始时，纳尔同样会说出一句台词，这次固定两种模式，陨石流+月华冲或者月华冲+热离子光束。如果是前者，则在俯冲标记出现后，所有人在场中间小范围分散，处理陨石流，同时不要被俯冲到。然后保持远离MT直到月华冲结束。如果是后者，则所有人在场地正中间，MT单独远离人群引导月华冲，月华冲出现后，MT立刻回到人群一起分摊热离子光束。</p>
+									<div class="figure aligncenter">
+										<img src="img/p2/dragonrush.png" alt="">
+										<div>
+											<li class="text-align-center">※左图为P2龙神加护读条后，出现的小龙位置。转阶段时玩家可以提前消除P1的BCD标记。</li>
+											<li class="text-align-center">※标记第一个俯冲位B：根据标记A迅速确定12点，顺时针找到第一二条龙。由于图中两条龙位置较远，B点标记在两条龙之间。</li>
+											<li class="text-align-center">※标记第二个俯冲位C：找到第三条龙，在第三条龙顺时针的一侧标记C点。</li>
+											<li class="text-align-center">※标记第三个俯冲位D：找到最后两条龙。由于图中两条龙位置较近，因此在两条龙顺时针的一侧标记D点。</li>
+											<li class="text-align-center">※最后俯冲效果如右图所示。</li>
+										</div>
+									</div>
+									<p class="attention-part">※负责标点的玩家注意，连续两个标点不要相撞（比如顺时针标记了B+逆时针标记C），容易导致后面玩家在放标记的时候被前面的小龙俯冲误伤。</p><br>
+									<p class="attention-part">※在俯冲点名消失前，BOSS会对点名的玩家使用二连超新星，玩家需要在标记点附近移动，躲开超新星的黑圈范围，在俯冲标记消失后再回人群。提前回来会导致俯冲范围变大。</p>
+									<h4>俯冲阶段的台词</h4>
+									<p>在俯冲阶段开始时，奈尔同样会说出一句台词，这次固定两种模式，陨石流+月华冲或者月华冲+热离子光束。我们还是分成这两种情况具体说明一下：</p><br>
+									<p>※月华冲+热离子光束</p><br>
+									<p>比较简单的模式。俯冲标记出现后，被点名的玩家去放俯冲标记。其余人在场地正中间1点集合，MT单独远离人群。俯冲过程中，BOSS会先对MT使用月华冲，MT在月华冲后回到1点和人群一起分摊热离子光束。</p><br>
+									<p class="attention-part">※放俯冲点名的玩家可以开着疾跑回来和人群一起分摊（时间来得及回来分摊）。</p><br>
+									<p>※陨石流+月华冲</p><br>
+									<p>容易出现减员的情况。俯冲标记出现后，被点名的玩家去放俯冲标记。其余人在场地中央分散诱导陨石流。结束后MT单独远离人群诱导月华冲。</p><br>
+									<p class="attention-part">※陨石流会在第三次小龙俯冲前判定，意味着前两个放俯冲标记的玩家需要回到场地中央，因此在中央没被点名的玩家最好在B和C方向腾出空位，供放标记的人站。否则容易出现空间不够而被俯冲冲到或者重复吃到2个陨石流的情况。</p><br>
 									
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
@@ -532,8 +566,9 @@
 										</div>
 										<div class="title-hr"></div>
 									</div>
-									<p>俯冲结束后就是奈尔阶段的结尾，BOSS会使用任意一种台词，由于俯冲后不会再有冰火雷，因此处理起来很容易。台词后是凶鸟尖喙（换T）+巴哈姆特之爪。如果奈尔血量没有降至0，那么他会读条百万核爆强制灭团，否则他将飞走，标志进入P3巴哈姆特阶段。</p>
-									<br><br><br><br><br><br><br><br>
+									<p>俯冲结束后奈尔会对MT使用巴哈姆特之爪，标志着奈尔阶段进入结尾。随后BOSS会使用两次台词，两次台词均是所有情况随机，由于俯冲后不会再有冰火雷，因此处理起来很容易。</p><br>
+									<p>台词后是凶鸟尖喙（换T）+巴哈姆特之爪。如果奈尔血量没有降至1%，那么他会再次使用随机的一次台词然后读条百万核爆强制灭团。否则他将飞走，标志进入P3巴哈姆特阶段。</p>
+									<br><br>
 								</div>
 							</div>
 						</article>
