--- a/bahamut/P1.html
+++ b/bahamut/P1.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <head>
 	<meta charset="UTF-8">
-	<title>Twintania</title>
+	<title>绝巴哈姆特歼灭战</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css">
 	<link rel="stylesheet" type="text/css" href="css/guide-global.css">
 	<link rel="stylesheet" type="text/css" href="css/hover-global.css">
 	<link rel="stylesheet" type="text/css" href="css/vis-global.css">
 	<link rel="stylesheet" type="text/css" href="css/content.css">
 	<link rel="stylesheet" type="text/css" href="css/status.css">
+	<link rel="stylesheet" type="text/css" href="css/edit-vis.css">
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="https://momentjs.com/downloads/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
 </head>
 <body>
-	<div id="image-frame">
+	<div style="display:none" id="image-frame">
 		<img class="hover-img" src="" alt="">
 	</div>
-	<div id="status-frame" class="hover-frame">
+	<div style="display:none" id="status-frame" class="hover-frame">
 		<div class="hover-block">
 			<div class="hover-header">
 				<div>
@@ -48,19 +50,48 @@
 	</div>
 
 	<div class="site-wrapper">
+		<div class="site-title">
+			<div id="site-title-content">
+				<img src="img/title.png" alt="" id="site-title-img">
+			</div>
+		</div>
+		<div class="site-menu">
+			<div class="site-menu-area">
+				<div class="site-menu-item">
+					<div class="gap"></div>
+					<div class="site-menu-item-name">双塔尼亚
+					</div>
+				</div>
+				<div class="site-menu-item">
+					<div class="gap"></div>
+					<div class="site-menu-item-name">奈尔·神·达那</div>
+				</div>
+				<div class="site-menu-item">
+					<div class="gap"></div>
+					<div class="site-menu-item-name">巴哈姆特之灵</div>
+				</div>
+				<div class="site-menu-item">
+					<div class="gap"></div>
+					<div class="site-menu-item-name">万亿核爆</div>
+				</div>
+				<div class="site-menu-item">
+					<div class="site-menu-item-name">黄金巴哈姆特</div>
+				</div>
+			</div>
+		</div>
+		<div class="guide-thumbnail">
+								<img width="1920" height="1080" src="img/guide-thumbnail.jpg" class="img-thumbnail">
+							</div>
 		<div class="site-content">
 			<div class="site-container">
 				<div class="page-content">
 					<main class="guide-main">
 						<article class="article">
-							<div class="guide-thumbnail">
-								<img width="1920" height="1080" src="img/guide-thumbnail.jpg" class="img-thumbnail">
-							</div>
-							<header class="guide-header">
+							<header style= "display: none" class="guide-header">
 								<h1 class="guide-title">绝巴哈姆特歼灭战</h1>
 							</header>
 							<div class="guide-content">
-								<div class="info-section">
+								<div  style= "display: none" class="info-section">
 									<div class="info-header">
 										<div>
 											<div class="info-icon">
@@ -100,7 +131,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="info-section">
+								<div style= "display: none" class="info-section">
 									<div class="info-header">
 										<div>
 											<div class="info-icon">
@@ -121,7 +152,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="info-section">
+								<div style= "display: none" class="info-section">
 									<div class="info-header">
 										<div>
 											<div class="info-icon">
@@ -143,7 +174,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="info-section">
+								<div style= "display: none" class="info-section">
 									<div class="info-header">
 										<div>
 											<div class="info-icon">
@@ -180,10 +211,14 @@
 										</div>
 									</div>
 								</div>
-								<hr />
 								<div class="info-section">
-									<h2>P1-双塔尼亚</h2>
-									<h3>简易流程说明</h3>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p1/p1-timeline.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
+									<br>
 									<li>开场顺劈</li>
 									<li>火球+旋风→分散诱导+集合分摊</li>
 									<li>第一次死刑+顺劈</li>
@@ -205,9 +240,12 @@
 									<li>五连喷（随机）+火球</li>
 									<li>第四次死刑+顺劈</li>
 									<li>以太失控（狂暴）</li>
-									<br>
-									<hr />
-									<h3>核心机制-『拘束装置』</h3>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p1/p1-coremech.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
 									<p>当双塔尼亚的血量被削减至74%,44%和0%时，会在BOSS所在位置依次掉落三个
 										<a  class="img-hover-area" name="neurolink">
 											<img src="img/hover-sign.png" alt="">
@@ -223,17 +261,21 @@
 									<div class="figure aligncenter">
 										<img src="img/p1-map.png" alt="">
 										<div>
-											<li class="text-align-center">※A点:场地正北 1点:场地中央 保持不变</li>
+											<li class="text-align-center">※A点：场地正北 1点：场地中央 全程保持不变</li>
 											<li class="text-align-center">※B→C→D点为P1-『拘束装置』放置顺序</li>
-											<li class="text-align-center">※2点：1点和A点之间，往1点靠近，为P3用点</li>
+											<li class="text-align-center">※2点：1点和A点之间，为P3用点</li>
 										</div>
 									</div>
-									<hr />
-									<h3>开场(100%～74%)</h3>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p1/p1-1.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
 									<h4>基本技能</h4>
-									<li>普攻:每3秒对当前MT的单体攻击，中等「物理」「斩属性」伤害。
-									<li>垂直下落：「物理」顺劈技能。BOSS正前方扇形范围攻击，造成大量「物理」伤害。</li>
-									<li>死刑：换坦机制，死刑技能。对当前坦克造成特大「物理伤害」，并附加一层
+									<li>普攻:每3秒对当前MT的单体攻击，「斩击属性」中等伤害。
+									<li>垂直下落：顺劈技能，物理伤害。BOSS正前方扇形范围攻击，造成大量「物理」伤害。</li>
+									<li>死刑：换坦机制，死刑技能，物理伤害。对当前坦克造成特大伤害，并附加一层
 										<a  class="status-area" name="SlashingResistanceDownII">
 											<img src="img/status/SlashingResistanceDownII.png" alt="">
 											&nbsp;&nbsp;&nbsp;斩击耐性大幅降低
@@ -245,7 +287,7 @@
 											&nbsp;&nbsp;&nbsp;旋风
 										</a>
 										。玩家踩中旋风时，旋风将会爆炸秒杀上面的玩家，并将周围玩家击退到场地边缘导致死亡。玩家需要在判定前保持移动，躲开脚下的旋风。</li>
-									<li>火球：分摊机制。BOSS点名一名玩家头上出现
+									<li>火球：分摊机制，魔法伤害。BOSS点名一名玩家头上出现
 										<a  class="img-hover-area" name="firetriangle">
 											<img src="img/hover-sign.png" alt="">
 											&nbsp;&nbsp;&nbsp;红色三角标记
@@ -271,8 +313,12 @@
 									<p class="attention-part">※换坦后之前的主坦第一时间远离正面躲开顺劈。</p>
 									<p class="attention-part">※治疗注意「垂直下落」和「普攻」可能会同时判定导致MT瞬间大出血。</p><br>
 									<p>在「垂直下落」后，会循环开场的「火球+旋风」，一般队伍可以在「火球+旋风」前后进入下一阶段。</p><br>
-									<hr />
-									<h3>第一个『拘束装置』掉落后(74%～44%)</h3>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p1/p1-2.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
 									<h4>新增技能</h4>
 									<li>液体地狱：诱导机制。BOSS对远处的玩家使用五连喷，每次造成2k左右的伤害并在玩家脚下留下一个
 										<a  class="img-hover-area" name="firecircle">
@@ -345,8 +391,12 @@
 										</div>
 									</div>
 									<p>随后是第二次「垂直下落」，正常情况下此时BOSS会掉落第二个『拘束装置』进入P1最后阶段，MT立刻将BOSS拉到最后一个标记处。</p><br>
-									<hr />
-									<h3>第二个『拘束装置』掉落后(44%～0%)</h3>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p1/p1-3.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
 									<h4>技能改动</h4>
 									<li>液体地狱：诱导+随机机制。这个阶段液体地狱总是成对出现——第一次为诱导机制，同上一阶段。第二次为随机机制，BOSS将会随机瞄准一名玩家，与距离无关。</li>
 									<li>魔力炼成*2：诱导机制。这个阶段将会点名2名DPS，同时生成2个黑球。由于黑球是AOE范围伤害并且会附加<a  class="status-area"  name="ManaHypersensitivity">
@@ -375,11 +425,15 @@
 									<p>组合技后是「死刑+垂直下落」，同P1阶段处理即可。这一次死刑时坦克的退避仍在CD，注意控制好仇恨（如果此时忍者有烟雾弹，影渡等技能也可使用）。</p><br>
 									<p>接着是组合技「魔力炼成x2+旋风」，除了这次是双黑球外与上一阶段处理方法相同。</p><br>
 									<p>最后是一次「垂直下落」，结束后进入循环——</p>
-									<p>「液体地狱（诱导）+黑球」→「液体地狱（诱导）+火球」→第四次死刑+顺劈→黑球+旋风。</p><br>
+									<p>「液体地狱（诱导）+黑球」→「液体地狱（随机）+火球」→第四次死刑+顺劈→黑球+旋风。</p><br>
 									<p>一般队伍能在2:50秒左右结束战斗，随后双塔尼亚将会飞走，标志P1结束。否则3:00时双塔尼亚将会变得不可选中并读条「以太狂暴」团灭队伍。</p><br>
-									<hr />
-									<h3>p1完整时间轴</h3>
-									<div id="p1-timeline-area" class="timeline-area"></div>
+									<div class="paragraph-title">
+										<div class="paragraph-title-content">
+										<img src="img/p1/p1-fulltimeline.png" class="paragraph-title-img">	
+										</div>
+										<div class="title-hr"></div>
+									</div>
+									<div id="p1-timeline-area" class="timeline-area"></div><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</article>
