--- a/bahamut/P2.html
+++ b/bahamut/P2.html
@@ -51,167 +51,51 @@
 
 	<div class="site-wrapper">
 		<div class="site-title">
-			<div id="site-title-content">
+			<div id="site-title-content" onclick="window.open('index.html','_self')">
 				<img src="img/title.png" alt="" id="site-title-img">
 			</div>
 		</div>
 		<div class="site-menu">
 			<div class="site-menu-area">
-				<div class="site-menu-item">
+				<div class="site-menu-item" onclick="window.open('p1.html','_self')">
 					<div class="gap"></div>
-					<div class="site-menu-item-name">双塔尼亚
+					<div class="site-menu-item-name">
+						双塔尼亚
 					</div>
 				</div>
-				<div class="site-menu-item">
+				<div class="site-menu-item" onclick="window.open('p2.html','_self')">
 					<div class="gap"></div>
 					<div class="site-menu-item-name">奈尔·神·达那</div>
 				</div>
-				<div class="site-menu-item">
+				<div class="site-menu-item" onclick="window.open('p3.html','_self')">
 					<div class="gap"></div>
 					<div class="site-menu-item-name">巴哈姆特之灵</div>
 				</div>
 				<div class="site-menu-item">
 					<div class="gap"></div>
-					<div class="site-menu-item-name">万亿核爆</div>
+					<div class="site-menu-item-name">万亿核爆·施工中</div>
 				</div>
 				<div class="site-menu-item">
-					<div class="site-menu-item-name">黄金巴哈姆特</div>
+					<div class="site-menu-item-name">黄金巴哈·施工中</div>
 				</div>
 			</div>
 		</div>
 		<div class="guide-thumbnail">
-								<img width="1920" height="1080" src="img/guide-thumbnail.jpg" class="img-thumbnail">
+								<img width="1920" height="1080" src="img/guide-thumbnail-p2.png" class="img-thumbnail">
 							</div>
 		<div class="site-content">
 			<div class="site-container">
 				<div class="page-content">
 					<main class="guide-main">
 						<article class="article">
-							<header style= "display: none" class="guide-header">
-								<h1 class="guide-title">绝巴哈姆特歼灭战</h1>
-							</header>
 							<div class="guide-content">
-								<div  style= "display: none" class="info-section">
-									<div class="info-header">
-										<div>
-											<div class="info-icon">
-												<img src="img/Asset 1.png" alt="">
-											</div>
-										</div>
-										<div>
-											<div class="info-header-name">报酬</div>
-										</div>
-									</div>
-									<div class="info-content-area">
-										<div class="info-content-section">
-											<div class="info-content-block">
-												<div class="info-content-discription">
-													<div class="chest-area">
-														<div>
-															<img class = "chest-shade" src="img/chest-shade.png" alt="">
-															<div class="chest-icon">
-																<img src="img/totem.png" alt="">
-															</div>
-
-															<div class="chest-num">
-																<p>&nbsp;1</p>
-															</div>
-															<img class = "chest-shade" src="img/chest-shade.png" alt="">
-															<div class="chest-icon">
-																<img src="img/Tomestone.png" class="icon-blur" alt="">
-																<img src="img/Tomestone.png" alt="">
-															</div>
-															<div class="chest-num">
-																<p>30</p>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div style= "display: none" class="info-section">
-									<div class="info-header">
-										<div>
-											<div class="info-icon">
-												<img src="img/Asset 3.png" alt="">
-											</div>
-										</div>
-										<div>
-											<div class="info-header-name">概要</div>
-										</div>
-									</div>
-									<div class="info-content-area">
-										<div class="info-content-section">
-											<div class="info-content-block">
-												<div class="info-content-discription">
-													<li>呵，傲娇叔</li>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div style= "display: none" class="info-section">
-									<div class="info-header">
-										<div>
-											<div class="info-icon">
-												<img src="img/Asset 4.png" alt="">
-											</div>
-										</div>
-										<div>
-											<div class="info-header-name">信息</div>
-										</div>
-									</div>
-									<div class="info-content-area">
-										<div class="info-content-section">
-											<div class="info-content-block">
-												<div class="info-content-discription">
-													<li>限制时间 120分/巴哈姆特大迷宫/无法补充队员</li>
-													<li>领取报酬：1周1次/不可与其他任务同时搜索</li>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div style= "display: none" class="info-section">
-									<div class="info-header">
-										<div>
-											<div class="info-icon">
-												<img src="img/Asset 5.png" alt="">
-											</div>
-										</div>
-										<div>
-											<div class="info-header-name">参加条件</div>
-										</div>
-									</div>
-									<div class="info-content-area">
-										<div class="info-content-section">
-											<div class="info-content-block">
-												<div class="info-content-discription">
-													<li>8人用</li>
-													<li>无法解除人数限制</li>
-													<li>职业：战斗精英 魔法导师</li>
-													<li>70级</li>
-													<li>※符合规定人数时可以以任何职业构成参加，且不会受到装备品级限制。</li>
-													<br>
-													<li>完成下列任务</li>
-													<li>欧米茄零式时空狭缝 德尔塔环境4</li>
-													<br>
-													<li>从
-														<a  class="img-hover-area" name="map">
-															<img src="img/hover-sign.png" alt="">
-															&nbsp;&nbsp;&nbsp;黄金港·异国的诗人(11.5, 12.6)
-														</a>
-														处领取任务。
-													</li>	
-													<br><br><br><br>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
 								<div class="info-section">
+									<br><br>
+									<p class="attention-part">※白银凶鸟篇 相关更新：</p><br>
+									<li>更新了图解中的远程DPS站位：由于P1互换了两个远程DPS的站位，为了保证站位尽可能统一，方便记忆，后续图解中统一互换了远程DPS的位置。</li>
+									<li>更新了天崩地裂的站位分散。</li>
+									<br>
+									<p class="attention-part">※更新的具体内容直接Ctrl+F搜索“更新”即可看到。</p>
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
 										<img src="img/p2/p2-timeline.png" class="paragraph-title-img">	
@@ -281,13 +165,16 @@
 										<img src="img/p2/skyfall-1.png" alt="">
 										<div>
 											<li class="text-align-center">
-											※左图：固定一个标记点（拘束装置处）集合，等待被天崩地裂击退。
+											※左图：固定一个标记点/拘束装置处集合，等待被天崩地裂击退。
 											</li>
 											<li class="text-align-center">
-											※右图：击退后，按各自分好的位置散开处理陨石流，距离远的最好提前开启疾跑。
+											※右图：击退后，按各自分好的位置散开处理陨石流，距离远的最好提前开启疾跑。爆炸后左侧玩家朝左侧躲，右侧玩家朝右侧躲。
 											</li>
 											<li class="text-align-center">
 											※最好将BOSS引导都场地中间，因此让当前的MT（如图中战士）回到中间。图中站位仅作参考，开荒时请自行调整。
+											</li>
+											<li class="text-align-center">
+											※更新：由于P1最后一个拘束装置落在D，因此将左图改成从D点击退的图示，右图改为D点击退后标记点的分布。（非必要）互换了忍者和战士的位置，这样奈尔月华冲时会回到12点方向。
 											</li>
 										</div>
 									</div>
@@ -313,7 +200,7 @@
 									<p>一般治疗需要学会在天崩地裂时预读群刷/全大赦。如果预读失败，治疗被击退了无法奶到远处的玩家，直接就近抬血即可。由于DPS与治疗在同一组，因此不会出现加不到DPS的情况。如果时间允许，也可以立刻靠近中间群刷。</p><br>
 									<p class="attention-part">※是统一集合还是三分站位的选择权在于治疗。
 									</p><br>
-									<p>正常情况下，天崩地裂大概会造成1w～1w5左右的伤害，如果伤害过高，请调整集合点尽可能贴近场中间，或是检查全员的血量以及盾类BUFF是否足够。</p><br>
+									<p class="attention-part">※正常情况下，天崩地裂大概会造成1w～1w5左右的伤害，如果伤害过高，请调整集合点尽可能贴近场中间，或是检查全员的血量以及盾类BUFF是否足够。</p><br>
 									<p>陨石流结束后，是对当前MT的月华冲+巴哈姆特之爪。如果此时是骑士MT，可以开启无敌，否则请开启足够减伤。如果担心后续减伤不足，巴哈姆特之爪结束后可以进行换T处理。随后BOSS将读条龙神的加护，进入奈尔的第二阶段。</p>
 
 									<div class="paragraph-title">
@@ -322,7 +209,7 @@
 										</div>
 										<div class="title-hr"></div>
 									</div>
-									<p>BOSS在读条龙神的加护后，场外会召唤5只不可选中的小龙（冰火雷光暗），每条小龙会对玩家使用不同的技能。</p>
+									<p>BOSS在读条龙神的加护后，场外会召唤5只不可选中的小龙（冰爪/火角/雷翼/光牙/暗尾），每条小龙会对玩家使用不同的技能。</p>
 									<h4>小龙技能</h4>
 									<li>烈火球：火龙与随机一名玩家连线，数秒后以连线玩家为中心造成圆形小范围伤害，伤害量约为9k～1w，并对范围内的所有玩家附加状态
 										<a  class="status-area" name="Firescorched">
@@ -351,7 +238,7 @@
 										</a>
 										状态，持续时间依次为6/10/16秒——效果结束时将对周围小范围玩家造成致死等级的伤害并附加麻痹效果。
 									</li>
-									<li>救赎之翼：光龙随机点名一名玩家脚下出现光圈，短暂延迟后光圈爆炸，秒杀踩在上面的玩家，并在原地留下一个白圈。玩家踩在白圈上可以解除自身的
+									<li>救世之翼：光龙随机点名一名玩家脚下出现光圈，短暂延迟后光圈爆炸，秒杀踩在上面的玩家，并在原地留下一个白圈。玩家踩在白圈上可以解除自身的
 										<a  class="status-area" name="Doom">
 											<img src="img/status/Doom.png" alt="">
 											&nbsp;&nbsp;&nbsp;死亡宣告
@@ -400,16 +287,19 @@
 									<h4>核心机制三·奈尔的台词</h4>
 									<h5>※机制分析</h5>
 									<p>在BOSS的新增技能中，除了凶鸟尖喙外，其余的技能都没有任何读条/范围提示，需要根据奈尔的台词来判断她接下来使用的技能组合。</p><br>
-									<p>"O red moon, scorch my enemies!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+热离子光束</p>
-									<p>"O red moon, shine the path to conquest!"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+钢铁战车</p>
-									<p>"Blazing path, lead me to conquest!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+钢铁战车</p>
-									<p>"O refulgent moon, shine down your light!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+月流电圈</p>
-									<p>"From on high I descend, mine enemies to smite!" &emsp;&emsp;&emsp;——&emsp;凶鸟冲+钢铁战车</p>
-									<p>"From on high I descend, in blessed light to bask!"&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
-									<p>"Fleeting light, score the earth with a fiery kiss!" &emsp;——&emsp;月华冲+热离子光束</p>
-									<p>"Fleeting light, outshine the stars for the moon!" &emsp;&emsp;——&emsp;陨石流+月华冲</p>
+									<p>"月光啊！用你的炽热烧尽敌人！" &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+热离子光束</p>
+									<p>"月光啊！照亮铁血霸道！"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+钢铁战车</p>
+									<br>
+									<p>"被炽热灼烧过的轨迹 乃成铁血霸道！" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+钢铁战车</p>
+									<p>"炽热燃烧！给予我月亮的祝福！" &emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+月流电圈</p>
+									<br>
+									<p>"我降临于此，征战铁血霸道！" &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;凶鸟冲+钢铁战车</p>
+									<p>"我降临于此，对月长啸！"&emsp;&emsp;&emsp;&emsp;&emsp; &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
+									<br>
+									<p>"超新星啊，更加闪耀吧！照亮红月下炽热之地！" &emsp;&emsp; &emsp;——&emsp;月华冲+热离子光束</p>
+									<p>"超新星啊，更加闪耀吧！在星降之夜，称赞红月！" &emsp; &emsp;——&emsp;陨石流+月华冲</p>
 									<h5>※处理方法</h5>
-									<p>台词将会以气泡的样式显示在BOSS头上和聊天框中，这里推荐使用ACT监控或者由一名玩家来报机制。</p><br>
+									<p>台词将会以气泡的样式显示在BOSS头上和聊天框中，这里推荐使用ACT监控或者由一名玩家来报机制。（上述列出的为P2会出现的台词，后续阶段会再补充）</p><br>
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
 										<img src="img/p2/p2-2-1.png" class="paragraph-title-img">	
@@ -419,8 +309,8 @@
 									<p>龙神的加护过程中，一共有4次冰火雷点名+3次奈尔台词。在这里，我们分为四部分进行说明。</p>
 									<h4>第一次冰火雷+奈尔台词</h4>
 									<p>第一句台词为下面两种二选一：</p>
-									<p>"O red moon, scorch my enemies!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+热离子光束</p>
-									<p>"O red moon, shine the path to conquest!"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+钢铁战车</p><br>
+									<p>"月光啊！用你的炽热烧尽敌人！" &emsp; &emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+热离子光束</p>
+									<p>"月光啊！照亮铁血霸道！"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;月流电圈+钢铁战车</p><br>
 									<p>也就是月环后接分摊或者远离。同时这个过程中会出现冰火雷光暗的点名。我们来分解一下这个部分的处理。</p>
 									<div id="p2.3-timeline-area" class="timeline-area"></div>
 									<div class="figure aligncenter">
@@ -443,7 +333,7 @@
 										<div>
 											<li>※左图：月流电圈+双雷判定后，玩家远离BOSS躲开钢铁战车。</li>
 											<li>※中图：钢铁战车结束后，所有人回到BOSS正面准备分摊火圈，同时两名玩家被点名死亡宣告。</li>
-											<li>※右图：集合分摊火圈时，原来分散的位置将会出现第一个救赎之翼的白圈。<br>在分摊火圈后，6秒死亡宣告的玩家去踩第一个白圈。</li>
+											<li>※右图：集合分摊火圈时，原来分散的位置将会出现第一个救世之翼的白圈。<br>在分摊火圈后，6秒死亡宣告的玩家去踩第一个白圈。</li>
 											<li>※后续第二个白圈由于没有冰火雷要注意，躲开即可，不作说明。</li>
 										</div>
 									</div>
@@ -466,8 +356,8 @@
 									<br><hr>
 									<h4>第三次冰火雷+奈尔台词</h4>
 									<p>第三次冰火雷时，奈尔会先说出第二句台词，固定为下面两种：</p>
-									<p>"Blazing path, lead me to conquest!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+钢铁战车</p>
-									<p>"O refulgent moon, shine down your light!" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+月流电圈</p>
+									<p>"被炽热灼烧过的轨迹 乃成铁血霸道！" &emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+钢铁战车</p>
+									<p>"炽热燃烧！给予我月亮的祝福！" &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;热离子光束+月流电圈</p>
 									<br>
 									<p>也就是分摊+远离/靠近BOSS。在第二次冰火雷结束后，被点名的三名玩家立刻回人群分摊。接着根据台词决定是远离躲开钢铁战车或者靠近躲开月流电圈。台词机制处理结束后是第三次冰火雷+光暗点名，完整时间轴如下：</p>
 									<div id="p2.4-timeline-area" class="timeline-area"></div>
@@ -477,23 +367,23 @@
 										</div>
 									</div>
 									<br>
-									<p>随后会出现三次救赎之翼的白圈，这一次死亡宣告的时间依次为6/10/16秒，玩家根据时间的多少依次踩白圈处理。雷点名的玩家在分散诱导雷圈出现后，所有人回BOSS正面分摊火线即可。</p>
+									<p>随后会出现三次救世之翼的白圈，这一次死亡宣告的时间依次为6/10/16秒，玩家根据时间的多少依次踩白圈处理。雷点名的玩家在分散诱导雷圈出现后，所有人回BOSS正面分摊火线即可。</p>
 									<br>
-									<p class="attention-part">※然而这个阶段冰火雷点名会在第二个救赎之翼的白圈爆炸的同时出现，也是最难的部分——运气不好一名玩家可能需要处理若干个机制。处理的关键在于所有人要非常清楚：如果自己同时被点名了火/雷/死亡宣告，处理的顺序是什么。首先没被点名的幸运玩家站在BOSS正面分摊火圈即可。</p><br>
+									<p class="attention-part">※然而这个阶段冰火雷点名会在第二个救世之翼的白圈爆炸的同时出现，也是最难的部分——运气不好一名玩家可能需要处理若干个机制。处理的关键在于所有人要非常清楚：如果自己同时被点名了火/雷/死亡宣告，处理的顺序是什么。首先没被点名的幸运玩家站在BOSS正面分摊火圈即可。</p><br>
 									<p class="attention-part">※着重说明一下复数点名的处理顺序供大家参考：<br>
 										<li>6秒死亡宣告：踩第一个白圈→放雷→分摊火。</li>
 										<li>10秒死亡宣告： 踩第二个白圈→放雷→分摊火。</li>
-										<li>15秒死亡宣告：放雷→踩第三个白圈→分摊火。</li>
+										<li>16秒死亡宣告：放雷→踩第三个白圈→分摊火。</li>
 									</p>
 									<p class="attention-part">※请优先处理死亡宣告和雷圈，即使第三次没分摊到火圈，也可以在第四次冰火雷点名时进行补救。</li>
 									</p><br>
-									<p>火分摊后BOSS再次对MT使用巴哈姆特之爪，标志进入最后一次冰火雷点名。<br>
+									<p>火分摊后BOSS再次对MT使用巴哈姆特之爪，标志进入最后一次冰火雷点名机制。<br>
 
 									<br><hr>
 									<h4>第四次冰火雷+奈尔台词</h4>
 									<p>第三句奈尔的台词固定为：</p>
-									<p>"From on high I descend, mine enemies to smite!" &emsp;&emsp;&emsp;——&emsp;凶鸟冲+钢铁战车</p>
-									<p>"From on high I descend, in blessed light to bask!"&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
+									<p>"我降临于此，征战铁血霸道！" &emsp; &emsp;&emsp;——&emsp;凶鸟冲+钢铁战车</p>
+									<p>"我降临于此，对月长啸！"&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;——&emsp;凶鸟冲+月流电圈</p>
 									<br>
 									<p>也就是全员分散+远离/靠近BOSS。所有人先按分好的位置分散好，防止彼此靠的太近而被击退，分散站位可以参考下图。</p>
 									<div class="figure aligncenter">
@@ -513,7 +403,7 @@
 									<p>台词处理完后首先是火连线+双雷点名。火分摊依旧回到BOSS正面分摊，这里火连线分摊是为了防止前面有人错过火圈而做的保险，如果前面该分摊的时候都分摊到了，那么这次不分摊也没有关系。而这一次双雷的判定时间会比火圈分摊晚，因此雷点名的玩家在火圈分摊后立刻远离人群即可（如果之前火分摊都处理正确→自己身上没有冰buff，也可以不分摊火→直接远离人群诱导雷圈）。</p><br>
 									<p class="attention-part">※由于第四次冰火雷之后还有一轮冰，因此所有人必须确保第四次火线结束后身上不能有冰buff。</p>
 									<br>
-									<p>三次救赎之翼会在最后出现，不会与冰火雷重叠，因此比较简单，跟之前一样按持续时间不同依次解除BUFF。处理完纳尔会对MT读条「凶鸟尖喙」，MT开启减伤，ST嘲讽换坦，「龙神的加护」阶段结束正式进入小龙俯冲阶段。</p>
+									<p>三次救世之翼会在最后出现，不会与冰火雷重叠，因此比较简单，跟之前一样按持续时间不同依次解除BUFF。处理完纳尔会对MT读条「凶鸟尖喙」，MT开启减伤，ST嘲讽换坦，「龙神的加护」阶段结束正式进入小龙俯冲阶段。</p>
 									<br>
 									<h4>「龙神的加护」流程总结</h4>
 									<li>第一次冰火雷：固定两种模式</li>
@@ -555,9 +445,13 @@
 										</div>
 									</div>
 									<p class="attention-part">※负责标点的玩家注意，连续两个标点不要相撞（比如顺时针标记了B+逆时针标记C），容易导致后面玩家在放标记的时候被前面的小龙俯冲误伤。</p><br>
-									<p class="attention-part">※在俯冲点名消失前，BOSS会对点名的玩家使用二连超新星，玩家需要在标记点附近移动，躲开超新星的黑圈范围，在俯冲标记消失后再回人群。提前回来会导致俯冲范围变大。</p>
+									<p class="attention-part">※在俯冲点名消失前，BOSS会对点名的玩家使用二连超新星，玩家需要在标记点附近移动，躲开超新星的黑圈范围，在俯冲标记消失后再回人群。提前回来会导致俯冲范围变大。特别地，这里第二个俯冲标记点名的玩家可以先移动到标记附近，等黑洞出来后在移动到标记处，避免标记被黑洞覆盖而放不准。</p>
 									<h4>俯冲阶段的台词</h4>
-									<p>在俯冲阶段开始时，奈尔同样会说出一句台词，这次固定两种模式，陨石流+月华冲或者月华冲+热离子光束。我们还是分成这两种情况具体说明一下：</p><br>
+									<p>在俯冲阶段开始时，奈尔同样会说出一句台词，这次固定两种模式，陨石流+月华冲或者月华冲+热离子光束。</p>
+									<p>这一次奈尔的台词固定为：</p>
+									<p>"超新星啊，更加闪耀吧！在星降之夜，称赞红月！" &emsp; &emsp; &emsp;&emsp;——&emsp;陨石流+月华冲</p>
+									<p>"超新星啊，更加闪耀吧！照亮红月下炽热之地！"&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;——&emsp;月华冲+热离子光束</p>
+									<p>我们还是分成这两种情况具体说明一下：</p><br>
 									<p>※月华冲+热离子光束</p><br>
 									<p>比较简单的模式。俯冲标记出现后，被点名的玩家去放俯冲标记。其余人在场地正中间1点集合，MT单独远离人群。俯冲过程中，BOSS会先对MT使用月华冲，MT在月华冲后回到1点和人群一起分摊热离子光束。</p><br>
 									<p class="attention-part">※放俯冲点名的玩家开着疾跑回来和人群一起分摊（第三个俯冲点名的玩家有可能来不及，但其余7人一定要分摊到）。</p><br>
@@ -572,7 +466,7 @@
 										<div class="title-hr"></div>
 									</div>
 									<p>俯冲结束后奈尔会对MT使用巴哈姆特之爪，标志着奈尔阶段进入结尾。随后BOSS会使用两次台词，两次台词均是所有情况随机，由于俯冲后不会再有冰火雷，因此处理起来很容易。</p><br>
-									<p>台词后是凶鸟尖喙（换T）+巴哈姆特之爪。如果奈尔血量没有降至1%，那么他会读条百万核爆强制灭团。否则他将飞走，标志进入P3巴哈姆特阶段。</p>
+									<p>台词后是凶鸟尖喙（换T）+巴哈姆特之爪。如果奈尔血量没有降至1%，那么他会读条「奈尔之怒」强制灭团。否则他将飞走，标志进入P3巴哈姆特阶段。</p>
 									<br><br>
 								</div>
 							</div>
