--- a/bahamut/P2.html
+++ b/bahamut/P2.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="site-menu-item" onclick="window.open('p3.html','_self')">
 					<div class="gap"></div>
-					<div class="site-menu-item-name">巴哈姆特之灵</div>
+					<div class="site-menu-item-name">至尊巴哈姆特</div>
 				</div>
 				<div class="site-menu-item">
 					<div class="gap"></div>
@@ -92,8 +92,9 @@
 								<div class="info-section">
 									<br><br>
 									<p class="attention-part">※白银凶鸟篇 相关更新：</p><br>
-									<li>更新了图解中的远程DPS站位：由于P1互换了两个远程DPS的站位，为了保证站位尽可能统一，方便记忆，后续图解中统一互换了远程DPS的位置。</li>
-									<li>更新了天崩地裂的站位分散。</li>
+									<li>2/15-追加了第一次冰火雷时，左右雷分散的优先顺序。</li>
+									<li>2/14-更新了图解中的远程DPS站位：由于P1互换了两个远程DPS的站位，为了保证站位尽可能统一，方便记忆，后续图解中统一互换了远程DPS的位置。</li>
+									<li>2/14-更新了天崩地裂的站位分散。</li>
 									<br>
 									<p class="attention-part">※更新的具体内容直接Ctrl+F搜索“更新”即可看到。</p>
 									<div class="paragraph-title">
@@ -317,12 +318,16 @@
 										<div>
 											<li>※P2第一次冰火雷点名完整时间轴</li>
 										</div>
+										<div>
+											<li class="attention-part">※这里的救世之翼指的是小白圈出来的时间。由于光圈爆炸到白圈出来有咏唱时间，玩家实际上看到的动画效果应该是，第一个大光圈刷新→死亡宣告点名→光圈爆炸，白圈刷新。——感谢“迷路的小羊”提醒</li>
+										</div>
 									</div>
 									<p>首先是双雷点名+月环。两个被雷点名的玩家站在BOSS左上方和右上方，其余人站在BOSS正面，如下图所示三角站位。</p>
 									<div class="figure aligncenter">
 										<img src="img/p2/lunarthunder.png" alt="">
 										<div>
 											<li>※「双雷+月流电圈」三分站位图示。</li>
+											<li>※更新：从左往右放置雷的优先顺序可以参考 白魔-学者-忍者-龙骑-诗人-召唤-战士-骑士。例如白魔被点雷永远去左边，而骑士则永远去右边。</li>
 										</div>
 									</div>
 									<br>
