--- a/bahamut/p3.html
+++ b/bahamut/p3.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="site-menu-item" onclick="window.open('p3.html','_self')">
 					<div class="gap"></div>
-					<div class="site-menu-item-name">巴哈姆特之灵</div>
+					<div class="site-menu-item-name">至尊巴哈姆特</div>
 				</div>
 				<div class="site-menu-item">
 					<div class="gap"></div>
@@ -137,7 +137,7 @@
 									</div>
 									<p>由于整个第七灵灾持续时间为8秒，而三段坦克LB的持续时间也为8秒，提前开启LB会导致覆盖不了最后一下大伤害灵灾之焰。因此三段LB需要在所有人被击退时开启。</p><br>
 									<p>而二段坦克LB持续时间有12秒，可以覆盖整个第七灵灾，但由于减伤幅度不够，无盾下，灵灾之炎的每段伤害在1w左右，最后的大伤害在3w5左右，因此过程中需要不断团血，确保团内成员在吃最后一下伤害时保持满状态。</p><br>
-									<p>第七灵灾结束后，巴哈姆特之灵现身，正式进入P3。</p>
+									<p>第七灵灾结束后，至尊巴哈姆特现身，正式进入P3。</p>
 									<div class="paragraph-title">
 										<div class="paragraph-title-content">
 										<img src="img/p3/p3-bahamut.png" class="paragraph-title-img">	
@@ -153,7 +153,7 @@
 									<div id="p3.0-timeline-area" class="timeline-area"></div>
 									<div class="figure aligncenter">
 										<div>
-											<li>※P3巴哈姆特之灵简易时间轴</li>
+											<li>※P3至尊巴哈姆特简易时间轴</li>
 										</div>
 									</div>
 									<p>每个三重奏之间的间隔阶段，巴哈姆特会单独出现，仅使用上面提到的核爆吐息和平击这两个技能。而在三重奏中，巴哈姆特会使用以下技能：</p>
