--- a/bahamut/index.html
+++ b/bahamut/index.html
@@ -69,7 +69,7 @@
 				</div>
 				<div class="site-menu-item" onclick="window.open('p3.html','_self')">
 					<div class="gap"></div>
-					<div class="site-menu-item-name">巴哈姆特之灵</div>
+					<div class="site-menu-item-name">至尊巴哈姆特</div>
 				</div>
 				<div class="site-menu-item">
 					<div class="gap"></div>
